--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="page">
         <div class="content-constraint">
             <div class="container">
-                <div class="row  header">
+                <header class="row">
                     <div class="offset-by-one one columns">
                         <a href="https://www.tesla.com/" class="logo" title="Tesla Motors">Tesla Motors</a>
                     </div>
@@ -65,13 +65,13 @@
                         </ol>
 
                     </div>
-                </div>
+                </header>
             </div>
         </div>
 
         <article>
             <blockquote>
-                On iteration:&nbsp;&nbsp; “You want to be extra rigorous about making the best possible thing you can. Find everything that’s wrong with it and fix it. Seek negative feedback, particularly from friends.”
+                <span>On iteration:&nbsp;&nbsp;</span> “You want to be extra rigorous about making the best possible thing you can. Find everything that’s wrong with it and fix it. Seek negative feedback, particularly from friends.”
 
                 <p> - Elon Musk </p>
                 <p> Co-Founder &amp; CEO </p>
@@ -127,49 +127,42 @@
             </div>
         </div>
 
-        <div class="beforefooter2">
+        <div>
             <div>
-                <div>
-                    <h1 class="jumbotron"> Premium Electric Vehicles </h1>
-                </div>
-                <p class="video">
-                    <a href="https://www.tesla.com/autopilot" class="alt-link alt-link--fancy " title="Learn more about Autopilot">
-                     Watch Our Self-Driving Video
-                  </a>
-                </p>
-                <div class="container">
-                    <div class="row">
-                        <div class=" offset-by-threee four columns">
-                            <a href="#" id="mybtn" class="btn" title="Order Yours">Order Yours</a>
-                            <a href="https://www.tesla.com/new" class="btn" title="See Inventory Vehicles">New Inventory</a>
-                            <a href="https://www.tesla.com/" class="btn" title="Test Drive" style="margin-left: 2px">Test Drive</a>
-                        </div>
+                <h1 class="jumbotron"> Premium Electric Vehicles </h1>
+            </div>
+            <p class="video">
+                <a href="https://www.tesla.com/autopilot" class="alt-link alt-link--fancy " title="Learn more about Autopilot">
+                    Watch Our Self-Driving Video
+                </a>
+            </p>
+            <div class="container">
+                <div class="row">
+                    <div class=" offset-by-threee four columns">
+                        <a href="#" id="mybtn" class="btn" title="Order Yours">Order Yours</a>
+                        <a href="https://www.tesla.com/new" class="btn" title="See Inventory Vehicles">New Inventory</a>
+                        <a href="https://www.tesla.com/" class="btn" title="Test Drive" style="margin-left: 2px">Test Drive</a>
                     </div>
                 </div>
             </div>
         </div>
 
 
-        <div class="pane-skinny-footer">
+        <div class="page-footer">
             <footer class="main">
                 <div class="container3">
                     <div class="wrapper">
-                        <div class="lowest panel-panel">
-                            <div class="footer-copy">
-                                <p class="colophon">
-                                    <a href="/about">Tesla Motors &copy; 2017</a>
-                                    <a href="/about/legal" title="Legal" class="vertical-separator">Privacy &amp; Legal</a>
-                                    <a href="/contact" title="Contact Tesla Motors" class="vertical-separator">Contact</a>
-                                    <a href="/careers" title="Careers at Tesla Motors" class="vertical-separator">Careers</a>
-                                    <a href="/forums" title="Tesla Forums" class="vertical-separator">Forums</a>
-                                    <a href="/findus/list" title="Tesla Locations" class="vertical-separator">Locations</a>
-                                    <!--<div style="position: relative;  display: inline;">-->
-                                    <span class="modal-link locale">&nbsp;
-                                         <!--<i class="icon-caret">▾</i>-->
-                                    </span>
-                                    <!--</div>-->
-                                </p>
-                            </div>
+                        <div class="footer-copy">
+                            <p class="colophon">
+                                <a href="/about">Tesla Motors &copy; 2017</a>
+                                <a href="/about/legal" title="Legal" class="vertical-separator">Privacy &amp; Legal</a>
+                                <a href="/contact" title="Contact Tesla Motors" class="vertical-separator">Contact</a>
+                                <a href="/careers" title="Careers at Tesla Motors" class="vertical-separator">Careers</a>
+                                <a href="/forums" title="Tesla Forums" class="vertical-separator">Forums</a>
+                                <a href="/findus/list" title="Tesla Locations" class="vertical-separator">Locations</a>
+                                <span class="modal-link locale">&nbsp;
+                                </span>
+                            </p>
                         </div>
                     </div>
                 </div>
